#
# Makefile.am - makefile for documentation
#
# Copyright (C) 2008-2010, David Beckett http://www.dajobe.org/
# 
# This file is licensed under the following three licenses as alternatives:
#   1. GNU Lesser General Public License (LGPL) V2.1 or any newer version
#   2. GNU General Public License (GPL) V2 or any newer version
#   3. Apache License, V2.0 or any newer version
# 
# You may not use this file except in compliance with at least one of
# the above three licenses.
# 
# See LICENSE.html or LICENSE.txt at the top of this package for the
# complete terms and further detail along with the license texts for
# the licenses in COPYING.LIB, COPYING and LICENSE-2.0.txt respectively.

man_MANS = flickcurl-config.1 flickcurl.1 flickrdf.1


# The name of the module.
DOC_MODULE=flickcurl

# The top-level SGML file.
DOC_MAIN_SGML_FILE=flickcurl-docs.xml

# Extra options to supply to gtkdoc-scan
SCAN_OPTIONS=

# The directory containing the source code. Relative to $(srcdir)
DOC_SOURCE_DIR=../src

# Used for dependencies
HFILE_GLOB=$(top_srcdir)/src/flickcurl.h
CFILE_GLOB=$(top_srcdir)/src/*.c

IGNORE_CFILES=

# Headers to ignore
IGNORE_HFILES= \
	config.h win32_flickcurl_config.h \
	flickcurl_internal.h

# CFLAGS and LDFLAGS for compiling scan program. Only needed
# if $(DOC_MODULE).types is non-empty.
AM_CPPFLAGS =
GTKDOC_LIBS =

# Extra options to supply to gtkdoc-mkdb
MKDB_OPTIONS=--sgml-mode --output-format=xml --ignore-files="$(IGNORE_CFILES)"

# Extra options to supply to gtkdoc-mktmpl
MKTMPL_OPTIONS=

# Non-autogenerated (XML, other) files to be included in $(DOC_MAIN_SGML_FILE)
content_files = \
	flickcurl-authenticate.xml \
	flickcurl-searching.xml \
	version.xml \
	search-photos.c

# Images to copy into HTML directory
HTML_IMAGES = \
	appgarden-get-your-api-key.png \
	appgarden-commercial-picker.png \
	appgarden-tell-us-about-your-app.png \
	appgarden-new-api-key-secret.png \
	appgarden-edit-auth-flow.png \
	appgarden-edit-auth-flow-mobile.png \
	appgarden-test-app-page.png \
	appgarden-mobile-auth-page.png



# Extra options to supply to gtkdoc-fixref
FIXXREF_OPTIONS=

include $(top_srcdir)/gtk-doc.make

EXTRA_DIST+= \
$(man_MANS) \
flickcurl.1.in \
version.xml.in \
flickcurl-extras.xml

CLEANFILES+= search-photos.c

dist-hook-local: html-build.stamp
	@file=$(srcdir)/html/style.css; \
	$(ECHO) "Fixing CSS in $$file"; \
	$(SED) -e '/position: fixed/d' $$file > $$file.new && \
	mv $$file.new $$file

search-photos.c: $(srcdir)/../examples/search-photos.c
	$(SED) -e '1,/^$$/d' $< > $@

if MAINTAINER_MODE
flickcurl.1: $(srcdir)/flickcurl.1.in $(top_srcdir)/utils/flickcurl.c
	( cd $(top_builddir)/utils && $(MAKE) flickcurl ) && \
	sed -ne '1,/SH COMMANDS/p' $(srcdir)/flickcurl.1.in > flickcurl.1.head && \
	$(top_builddir)/utils/flickcurl -m0 > flickcurl.1.body && \
	sed -ne '/SH SEE ALSO/,$$p' $(srcdir)/flickcurl.1.in > flickcurl.1.tail && \
	cat flickcurl.1.head flickcurl.1.body flickcurl.1.tail > flickcurl.1 && \
	rm -f flickcurl.1.head flickcurl.1.body flickcurl.1.tail

flickcurl-extras.xml: $(top_srcdir)/utils/flickcurl.c
	( cd $(top_builddir)/utils && $(MAKE) flickcurl ) && \
	$(top_builddir)/utils/flickcurl -m1 > flickcurl-extras.xml
endif
